# Server

./: CMakeLists.txt
Depends/: CMakeLists.txt
Depends/Module/: Application.h  CMakeLists.txt  GUID.h  Module.cpp  Module.h  NFPlatform.h  NetBaseModule.h
Depends/Network/: CMakeLists.txt  Net.h  Network.cpp  Network.h
Depends/include/common/: NFPlatform.h
Depends/lib/win/: libevent_core.lib  mysqlpp.lib
Depends/lib/win32/: libevent.lib
Depends/libevent/: CMakeLists.txt  evdns.c  libevent.sln  libevent.vcxproj  libevent_core.vcxproj
Depends/protobuf/: CMakeLists.txt
HtBaseC/: CMakeLists.txt  DateTime.h  HtDateTime.cpp  HtString.cpp  HtString.h  String.cpp  String.h
Server/: CMakeLists.txt
Server/Common/: CMakeLists.txt
Server/Common/Module/: Application.h  CMakeLists.txt  DateTime.cpp  DateTime.h  Define.h  GUID.h  Guid.h  Module.cpp  Module.h  NFPlatform.h  NetBaseModule.h
Server/Common/Network/: CMakeLists.txt  Net.h  NetModule.cpp  NetModule.h  NetModuleBase.h  Network.cpp
Server/MasterServer/: CMakeLists.txt  MasterApp.cpp  MasterApp.h  main.cpp
Server/Protocol/: CMakeLists.txt  CMakeLists1.txt  Define.pb.cc  Define.pb.h  FleetingDefine.pb.cc  FleetingDefine.pb.h  FleetingDefine.proto  MsgBase.pb.cc  MsgBase.pb.h  MsgBase.proto  MsgDefine.pb.cc  MsgDefine.pb.h  MsgDefine.proto  MsgMysql.pb.cc  MsgMysql.pb.h  MsgMysql.proto  MsgPreGame.pb.cc  MsgPreGame.pb.h  MsgPreGame.proto  MsgShare.pb.cc  MsgShare.pb.h  MsgShare.proto  MsgURl.pb.cc  MsgURl.pb.h  MsgURl.proto  cpp.bat
