project(MasterServer)

INCLUDE_DIRECTORIES(
${HtBaseC_INCLUDE}
${Depends_INCLUDE}/Module
${Depends_INCLUDE}/include/common
${Depends_INCLUDE}/Common
)



file(GLOB_RECURSE SOURCE_FILE *.cpp)
file(GLOB_RECURSE HEADER_FILE *.h)



ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILE} ${HEADER_FILE})
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER "Server")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LINK_LIB})


 
	

